# langchain-series

./: pyproject.toml  requirements.txt
.virtual_documents/gen-ai/: Untitled.ipynb  agent_intro.ipynb  langchain-into.ipynb
gen-ai/: 3. agent_intro.ipynb  4. messages.ipynb  5. structure output.ipynb  6. memory.ipynb  agent_intro.ipynb  langchain-into.ipynb  tools.ipynb
gen-ai/.ipynb_checkpoints/: agent_intro-checkpoint.ipynb  langchain-into-checkpoint.ipynb
